# G2O-simple-optimization-tutorial

./: CMakeLists.txt  README.md  Step1.cpp  Step2.cpp  Step3.cpp  debug.txt  first_step.txt  input.g2o  output.g2o  test.cpp
